--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QB'
 - !lcsh 'Astronomy -- History'
+- GITenberg
 title: 'Ueber die schrecklichen Wirkungen des Aufsturzes eines Kometen auf die Erde
 
   und über die vor fünftausend Jahren gehabte Erscheinung dieser Art'
